# mslearn-mlops

./: .gitignore  pyproject.toml
experimentation/: train-classification-model.ipynb
mlruns/0/: meta.yaml
mlruns/0/1dc9581f95b84ce9afbda67ffc171783/: meta.yaml
mlruns/0/1dc9581f95b84ce9afbda67ffc171783/metrics/: training_f1_score  training_log_loss  training_precision_score  training_recall_score  training_roc_auc  training_score
mlruns/0/1dc9581f95b84ce9afbda67ffc171783/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/5c811cc3ba70479592d74e59928e3d74/: meta.yaml
mlruns/0/5c811cc3ba70479592d74e59928e3d74/metrics/: training_accuracy_score  training_f1_score  training_log_loss  training_precision_score  training_roc_auc  training_score
mlruns/0/5c811cc3ba70479592d74e59928e3d74/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/5de4cbf073de44a89ccf80e27745c9c7/: meta.yaml
mlruns/0/5de4cbf073de44a89ccf80e27745c9c7/metrics/: training_accuracy_score  training_f1_score  training_log_loss  training_precision_score  training_roc_auc_score  training_score
mlruns/0/5de4cbf073de44a89ccf80e27745c9c7/tags/: mlflow.log-model.history
mlruns/0/b2eb801a5cd5488d86191b1759e3b2f5/: meta.yaml
mlruns/0/b2eb801a5cd5488d86191b1759e3b2f5/metrics/: training_f1_score  training_log_loss  training_precision_score  training_recall_score  training_roc_auc  (+1 more)
mlruns/0/d97ded2fe5e342838e6fd9932439a72c/: meta.yaml
mlruns/0/f0dbf6883c714b3bae22219800b991fc/: meta.yaml
mlruns/0/fc0233d836f14f3e86b439864834b8c8/: meta.yaml
src/: job.yml
src/model/: train.py
(+40 files in other folders)
