[tool.poetry]
name = "mslearn-mlops"
version = "0.1.0"
description = ""
authors = ["Frederik Burgsmueller <frederik.burgsmueller@bechtle.com>"]
readme = "README.md"
packages = [{include = "mslearn_mlops"}]

[tool.poetry.dependencies]
python = "^3.9"
llvmlite = "^0.39.1"
mlflow = "^2.2.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
pytest = "^7.2.2"
scikit-learn = "^1.2.2"
sklearn = "^0.0.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
